--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
 <body>
 	<div id="wrapper">
 		<header id="header">
-			<!-- content header -->
+			<div class="nav-menu">
+				<div class="container">
+					<div class="menu">
+						<ul>
+							<li class="active"><a href="#">Home</a></li>
+							<li><a href="#">Shop</a></li>
+							<li><a href="#">Fearure</a></li>
+							<li><a href="#">Mega Group</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Blog</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
+					</div>
+					<div class="cart">
+						<a href="#"><span class="fa fa-cart"></span>Shopping cart (<span class="number-cart">0</span>)</a>
+					</div>
+				</div>
+			</div>
 		</header> <!-- end header -->
 
 		<div id="main-content">
