đây là phần head em

--- a/index.html
+++ b/index.html
@@ -15,11 +15,60 @@
 	<![endif]-->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/common.css"/>
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
 </head>
 <body>
 	<div id="wrapper">
 		<header id="header">
 			<!-- content header -->
+			<table class="table table-bordered">
+			 	<tbody>
+      				<tr style="text-align: center;">
+        				<td style="width: 34%;">
+        					<a class="a-head-top" href="" title="">
+						    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+						    <span>FRE SHIPPING ON ALLORDER</span>
+						    </a>
+						</td>
+					    <td style="width: 32%;">
+					       	<a class="a-head-top" href="" title="">
+				        	<i class="fa fa-money" aria-hidden="true"></i>
+				        	<span>100% MONEY BACK GUARANTEE</span>
+				        	</a>
+					    </td>
+					    <td style="width: 34%;">
+					        <a class="a-head-top" href="" title="">
+				        	<i class="fa fa-clock-o" aria-hidden="true"></i>
+				        	<span>ONLINE SUPPORT 24/7</span>
+				        	</a>
+					    </td>
+					</tr>
+				</tbody>
+			</table>
+			<div class="container-fluid">
+								    <div class="row head-center">
+      					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        					<img style="margin: 0% 30%;" src="images/logo.png" class="img-responsive" alt="">
+      					</div>
+      					<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 head-center-seach">
+        					<div class="seach" style="position: relative;top: 40px;right: 30px;">
+          						<form>
+            						<div class="input-group input-group-lg">
+              							<input type="text" class="form-control" placeholder="Search&#09;&#09;&#09;&#09;&#09;|">
+                <div class="input-group-btn">
+                  <button class="btn btn-danger bgbt_seach" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                </div>
+              </div>
+          </form>
+        </div>
+      </div>
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 head-center-seach">
+        <div class="icon-facebook circle"><i class="fa fa-facebook"></i></div>
+        <div class="icon-twitter circle"><i class="fa fa-twitter"></i></div>
+        <div class="icon-instagram circle"><i class="fa fa-instagram"></i></div>
+        <div class="icon-youtube circle"><i class="fa fa-youtube"></i></div>
+      </div>
+			</div>
 		</header> <!-- end header -->
 
 		<div id="main-content">
